# ztracing

./: .bazelrc  .clang-format  .clangd  .gitignore  .gitmodules  BUILD  CMakeLists.txt  GEMINI.md  LICENSE  MODULE.bazel  README.md  build.bat  build.sh  build.zig  build.zig.zon  build_sdl.bat  build_sdl.sh  enable-threads.js  format.sh  index.html  index.js  package-lock.json  package.json  publish.sh  styleguide.md  vite.config.js  vite.config.mjs  webpack.config.js  ztracing.js  ztracing_improvement_plan.md  ztracing_shared.js  ztracing_worker.js
.agents/skills/trace-analyzer/: SKILL.md
.github/workflows/: deploy.yml  gh-pages.yml  test.yml
assets/: JetBrainsMono-Regular.h  assets.zig
core/: BUILD  allocator.c  allocator.h  allocator_test.cc  arena.c  arena.h  arena_test.cc  assert.h  counting_allocator.c  counting_allocator.h  darray.c  darray.h  darray_test.cc  hash_table.c  hash_table.h  hash_table_test.cc  json_reader.c  json_reader.h  json_reader_test.cc  json_writer.c  json_writer.h  json_writer_test.cc  logging.h  logging_native.c  logging_wasm.cc  string.c  string.h  string_test.cc  task.c  task.h  task_test.cc
public/: enable-threads.js
src/: BUILD  allocator.c  allocator.cc  allocator.h  allocator_test.cc  app.c  app.cc  app.cpp  app.h  app_msg.c  app_msg.h  app_msg_test.cc  arena.c  arena.h  arena.zig  arena_.zig  arena_test.cc  array_list.h  array_list_test.cc  assert.h  bench_parser.zig  c.h  c.zig  canvas_sdl3.c  canvas_sdl3.h  channel.c  channel.cpp  channel.h  channel_test.cc  cimgui.cpp  cimgui_wrapper.cpp  cli_table.c  cli_table.h  cli_table_test.cc  coi-serviceworker.js  colors.c  colors.cc  colors.h  config.h  core.cpp  (+180 more)
src/base/: base.c  base.h  base_config.h  base_core.h  base_list.h  base_memory.c  base_memory.h  base_string.c  base_string.h
src/testdata/cli/: aggregate_by_category.golden  aggregate_default.golden  aggregate_min_count_1.golden  aggregate_min_count_5.golden  aggregate_sort_by_count.golden  concurrency.golden  diff_by_category.golden  diff_default.golden  diff_sort_by_count_delta.golden  error_non_existent_file.golden  error_unknown_subcommand.golden  heatmap_minified.golden  heatmap_pretty.golden  help.golden  histogram.golden  histogram_match_render.golden  histogram_minified.golden  histogram_pretty.golden  histogram_time_filtered.golden  inspect.golden  inspect_minified.golden  inspect_nested_child.golden  inspect_nested_parent.golden  inspect_pretty.golden  query.golden  query_match_depth.golden  query_minified.golden  query_pretty.golden  query_time_limit.golden  query_track_filter.golden  summary.golden  summary_list_tracks.golden  summary_minified.golden  summary_pretty.golden  tracks_minified.golden  tracks_pretty.golden
src/ui/: ui.c  ui.h  ui_core.c  ui_core.h
src/ztracing/: ztracing_main.c
src_old/: app.cpp  core.h  document.cpp  json.cpp  json_trace.cpp  os.cpp  os.h  os_native.cpp  task.cpp
test/: all.zig  c.zig  root.zig  ui_pointer_listener_test.zig  ui_test.zig  utils.zig
tools/: BUILD  bench_parser.zig  gen_profile.zig  generate_mock_trace.py  profile_gen.zig  serve.py  trace_benchmark.cc  trace_renderer_benchmark.cc
